# haxpes

./: pyproject.toml  requirements.txt  setup.py
haxpes/: DefaultXASRegions.xls  DefaultXPSRegions.xls  beam_modes.py  dcm.py  dcm_settings.py  detectors.py  enabler.py  energy.py  energy_soft.py  energy_tender.py  exportfromqueue.py  floodgun.py  funcs.py  getXASregionsfromfile.py  hax_cam.py  hax_hw.py  hax_monitors.py  hax_ops.py  hax_runner.py  hax_suspenders.py  k2600b.py  motors.py  optimizers_test.py  peak_analyzer.py  pid_feedback.py  respeswriter.py  runXASspreadsheet.py  sample_handling.py  sample_handling_old.py  scans.py  ses.py  simobjects.py  slits.py  startup.py  tiled_info.py  util.py  writefiletest.py  xaswriter.py  xpswriter.py
haxpes/devices/: LUTnotes  RBD9103.py  dcm.py  dcm_settings.py  detectors.py  energy_tender.py  floodgun.py  k2600b.py  peak_analyzer.py  peak_settings.py  ses.py
haxpes/exporters_sansprefect/: export_tools.py  file_exporter.py  general_exporter.py
haxpes/old/: hax_hw.py  hax_ops_old.py
haxpes/peakplot/: peakplotter.py
haxpes/peakplot/utils/: data_handling.py  data_transforms.py
haxpes/plans/: SampleMacro.py  bl_op_plans.py  feedbacktest.py  intscancommands.py  scan_decorators.py  scans.py  time_estimation.py  undulator_cal.py  xps.py
haxpes/qt/models/: energy.py
haxpes/qt/plans/: respesCustom.py  xpsCustom.py  xpsParams.py  xpsPlan.py  xpsPlanLoader.py  xpsScan.py
haxpes/qt/views/: energy.py
haxpes/soft/: detectors.py  getbeam.py  motors.py  pgm_settings.py  soft_ops.py
haxpes/tender/: detectors.py  funcs.py  motors.py  tender_ops.py
haxpes/utilityscripts/: xasscans_xls2toml.py  xpsregions_xls2toml.py
