[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "haxpes"
authors = [
    {name = "Charles Titus", email = "ctitus@bnl.gov"},
    {name = "Conan Weiland", email = "cweiland@bnl.gov"},
]
description = "Beamline Framework"
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/NSLS-II-SST/haxpes"

[tool.setuptools]
packages = ["haxpes"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.entry-points."nbs_gui.plans"]
haxpes-xps = "haxpes.qt.plans.xpsPlan:XPSPlanWidget"
haxpes-xps-custom = "haxpes.qt.plans.xpsCustom:XPSCustomWidget"
haxpes-respes-custom = "haxpes.qt.plans.respesCustom:RESPESCustomWidget"

[project.entry-points."nbs_bl.plan_loaders"]
xps = "haxpes.plans.xps:load_xps"

[project.entry-points."nbs_gui.plan_loaders"]
xps-gui-loader = "haxpes.qt.plans.xpsPlanLoader:XPSPlanLoader"

[project.entry-points."nbs_bl.suspenders"]
haxpes-suspenders = "haxpes.hax_suspenders:get_suspenders"

[project.entry-points."nbs_bl.time_estimators"]
haxpes-xps-estimate = "haxpes.plans.time_estimation:xps_time_estimator"

[project.entry-points."nbs_bl.plan_decorators"]
haxpes-shutter = "haxpes.plans.scan_decorators:haxpes_shutter_decorator"
